[package]
name = "RollCreditsTTV"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = {  version = "1.44.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.2", features = ["cors"] }
